# ham

./: .adr-dir  .clang-format  .clang-tidy  .editorconfig  .gitignore  .gitmodules  ARCHITECTURE.md  Bootstrap.sh  CMakeLists.txt  Doxyfile  Jamfile  Jamrules  LICENSE.txt  Makefile.am  README.md  configure.ac  format.sh
cmd/: CMakeLists.txt  ham.cpp
docs/: Language-specification.md
docs/architecture-decisions/: 0001-record-architecture-decisions.md
docs/architecture/decisions/: 0008-creating-a-version-2.md  (+8 more)
docs/development/: Ninja-translation.md
include/: CMakeLists.txt
include/public/: HamError.hpp
src/: .gitignore  CMakeLists.txt  Compatibility.h  HamConfig.hpp.in  HamError.cpp  Jamfile  Makefile.am  ham.cpp
src/behavior/: Behavior.cpp  Behavior.h  Behavior.hpp  Compatibility.h  Compatibility.hpp
src/code/: ActionsDefinition.cpp  ActionsDefinition.h  ActionsDefinition.hpp  Assignment.cpp  Assignment.h  Assignment.hpp  BinaryExpression.cpp  BinaryExpression.h  BinaryExpression.hpp  Block.cpp  Block.h  Block.hpp  BuiltInRules.cpp  BuiltInRules.h  BuiltInRules.hpp  Case.cpp  Case.h  Case.hpp  Constant.cpp  Constant.h  Constant.hpp  Context.cpp  Defs.h  Defs.hpp  DumpContext.cpp  DumpContext.h  DumpContext.hpp  EvaluationContext.cpp  EvaluationContext.h  EvaluationContext.hpp  EvaluationException.h  EvaluationException.hpp  For.cpp  For.h  For.hpp  FunctionCall.cpp  FunctionCall.h  FunctionCall.hpp  Identifier.cpp  If.cpp  (+57 more)
src/data/: Domain.cpp  FileStatus.cpp  FileStatus.h  FileStatus.hpp  MakeTarget.cpp  MakeTarget.h  Path.cpp  Path.h  Path.hpp  RegExp.cpp  RegExp.h  RegExp.hpp  RuleActions.cpp  RuleActions.h  RuleActions.hpp  String.cpp  String.h  String.hpp  StringBuffer.h  StringBuffer.hpp  StringList.cpp  StringList.h  StringList.hpp  StringListOperations.cpp  StringListOperations.h  StringListOperations.hpp  StringPart.h  StringPart.hpp  Target.cpp  Target.h  Target.hpp  TargetBinder.cpp  TargetBinder.h  TargetBinder.hpp  TargetContainers.h  TargetContainers.hpp  TargetPool.cpp  TargetPool.h  TargetPool.hpp  Time.cpp  (+7 more)
src/grammar/: ActorFactory.h  Grammar.cpp  Grammar.h  Grammar_InitActionsDefinition.cpp  Grammar_InitArgument.cpp  Grammar_InitExpression.cpp  Grammar_InitRuleDefinition.cpp  Grammar_InitStatement.cpp  Grammar_InitString.cpp  Iterator.h  Jamfile  Lexer.h  NodeRegistry.cpp  NodeRegistry.h  ParseException.h  Parser.cpp  Parser.h  ScanException.h  SimpleFactory.h  Skipper.h  Spirit.h  Spirit.hpp  String.cpp  String.h  Symbols.cpp  Symbols.h  Token.h
src/make/: Command.cpp  Command.h  Command.hpp  CommandBuilder.hpp  DebugOptions.cpp  DebugOptions.h  MakeException.h  MakeException.hpp  MakeTarget.cpp  MakeTarget.h  MakeTarget.hpp  Options.cpp  Options.h  Options.hpp  Piecemeal.cpp  Piecemeal.hpp  Processor.cpp  Processor.h  Processor.hpp  TargetBuildInfo.cpp  TargetBuildInfo.h  TargetBuildInfo.hpp  TargetBuilder.cpp  TargetBuilder.h  TargetBuilder.hpp
src/parse/: NodeParser.cpp  Parser.cpp  PegtlParser.cpp  PegtlUtils.cpp
src/parser/: LexException.h  LexException.hpp  Lexer.h  Lexer.hpp  ParseException.h  ParseException.hpp  ParsePosition.h  ParsePosition.hpp  Parser.cpp  Parser.h  Parser.hpp  Token.h  Token.hpp
src/platform/: PlatformProcessDelegate.h  PlatformProcessDelegate.hpp
src/platform/unix/: PlatformProcessDelegate.cpp  PlatformProcessDelegate.h  PlatformProcessDelegate.hpp
src/process/: ChildInfo.h  ChildInfo.hpp  Process.cpp  Process.h  Process.hpp
src/ruleset/: .gitignore  JamRuleset.ham  build-ruleset.sh  update-rulesets.sh
src/test/: DataBasedTest.cpp  DataBasedTest.h  DataBasedTest.hpp  DataBasedTestParser.cpp  DataBasedTestParser.h  DataBasedTestParser.hpp  MultipleFilesDataBasedTest.cpp  MultipleFilesDataBasedTest.h  MultipleFilesDataBasedTest.hpp  RunnableTest.cpp  RunnableTest.h  RunnableTest.hpp  TemplateBasedTest.cpp  TemplateBasedTest.h  TemplateBasedTest.hpp  Test.cpp  Test.h  Test.hpp  TestEnvironment.h  TestEnvironment.hpp  TestException.cpp  TestException.h  TestException.hpp  TestFixture.cpp  TestFixture.h  TestFixture.hpp  TestRunner.cpp  TestRunner.h  TestRunner.hpp  TestSuite.cpp  TestSuite.h  TestSuite.hpp
src/tests/: Jamfile  PathTest.cpp  PathTest.h  PathTest.hpp  RegExpTest.cpp  RegExpTest.h  RegExpTest.hpp  RulesetTest.cpp  RulesetTest.h  RulesetTest.hpp  StringListTest.cpp  StringListTest.h  StringListTest.hpp  StringPartTest.cpp  StringPartTest.h  StringPartTest.hpp  StringTest.cpp  StringTest.h  StringTest.hpp  TargetBinderTest.cpp  TargetBinderTest.h  TargetBinderTest.hpp  TimeTest.cpp  TimeTest.h  TimeTest.hpp  VariableExpansionTest.cpp  VariableExpansionTest.h  VariableExpansionTest.hpp  ham-tests.cpp  lexer-test.cpp
src/util/: Constants.cpp  Constants.h  Constants.hpp  Exception.h  Exception.hpp  HamError.cpp  OptionIterator.cpp  OptionIterator.h  OptionIterator.hpp  Referenceable.cpp  Referenceable.h  Referenceable.hpp  SequentialSet.h  SequentialSet.hpp  StringUtil.hpp  TextFileException.h  TextFileException.hpp  TextFilePosition.h  TextFilePosition.hpp
testdata/code/: Exit  For  FunctionCall  Glob  If  Include  Limits  Match  Rule  Switch  VariablesMultipleFiles  While
testdata/make/: Action  ActionModifiers  BuiltInRules  Update  UpdateLeavesTarget  UpdateNoUpdateTarget  UpdatePseudoTarget  UpdateTemporaryTarget
testdata/variable_expansion/: Multiply  PathReplacersMultiple  PathReplacersSingleG  PathReplacersSingleM  PathReplacersSingleR  PathReplacersSingleS  PathSelectorsGristArchive  PathSelectorsGristNoArchive  PathSelectorsNoGristNoArchive  StringOperations
tests/: CMakeLists.txt  CodeUtils.cpp  ParseUtils.cpp  Utils.cpp
tests/code/: Identifier.cpp  Variable.cpp  Words.cpp
tests/data/: VariableScope.cpp
tests/parse/: ActionDefinitions.cpp  BracketExpressions.cpp  Conditions.cpp  ForLoops.cpp  GrammarAnalysis.cpp  Identifiers.cpp  IfStatements.cpp  Integers.cpp  Leafs.cpp  Lists.cpp  RuleDefinitions.cpp  RuleInvocations.cpp  RuleSignatures.cpp  StatementBlocks.cpp  Strings.cpp  TargetStatements.cpp  VariableAssignment.cpp  Variables.cpp  WhileLoops.cpp  Words.cpp
(+65 files in other folders)
