ACLOCAL_AMFLAGS = -I m4

AM_CPPFLAGS = -I./src @warnings@

lib_LTLIBRARIES = libham.la
libham_la_SOURCES =									\
	src/behavior/Behavior.cpp						\
	src/behavior/Behavior.h							\
	src/behavior/Compatibility.h					\
	src/code/ActionsDefinition.cpp					\
	src/code/ActionsDefinition.h					\
	src/code/Assignment.cpp							\
	src/code/Assignment.h							\
	src/code/BinaryExpression.cpp					\
	src/code/BinaryExpression.h						\
	src/code/Block.cpp								\
	src/code/Block.h								\
	src/code/BuiltInRules.cpp						\
	src/code/BuiltInRules.h							\
	src/code/Case.cpp								\
	src/code/Case.h									\
	src/code/Constant.cpp							\
	src/code/Constant.h								\
	src/code/Defs.h									\
	src/code/DumpContext.cpp						\
	src/code/DumpContext.h							\
	src/code/EvaluationContext.cpp					\
	src/code/EvaluationContext.h					\
	src/code/EvaluationException.h					\
	src/code/For.cpp								\
	src/code/For.h									\
	src/code/FunctionCall.cpp						\
	src/code/FunctionCall.h							\
	src/code/If.cpp									\
	src/code/If.h									\
	src/code/InListExpression.cpp					\
	src/code/InListExpression.h						\
	src/code/Include.cpp							\
	src/code/Include.h								\
	src/code/Jambase.cpp							\
	src/code/Jambase.h								\
	src/code/Jump.cpp								\
	src/code/Jump.h									\
	src/code/Leaf.cpp								\
	src/code/Leaf.h									\
	src/code/List.cpp								\
	src/code/List.h									\
	src/code/LocalVariableDeclaration.cpp			\
	src/code/LocalVariableDeclaration.h				\
	src/code/Node.cpp								\
	src/code/Node.h									\
	src/code/NotExpression.cpp						\
	src/code/NotExpression.h						\
	src/code/OnExpression.cpp						\
	src/code/OnExpression.h							\
	src/code/Rule.h									\
	src/code/RuleDefinition.cpp						\
	src/code/RuleDefinition.h						\
	src/code/RuleInstructions.cpp					\
	src/code/RuleInstructions.h						\
	src/code/RulePool.h								\
	src/code/Switch.cpp								\
	src/code/Switch.h								\
	src/code/UserRuleInstructions.cpp				\
	src/code/UserRuleInstructions.h					\
	src/code/While.cpp								\
	src/code/While.h								\
	src/data/FileStatus.cpp							\
	src/data/FileStatus.h							\
	src/data/Path.cpp								\
	src/data/Path.h									\
	src/data/RegExp.cpp								\
	src/data/RegExp.h								\
	src/data/RuleActions.cpp						\
	src/data/RuleActions.h							\
	src/data/String.cpp								\
	src/data/String.h								\
	src/data/StringBuffer.h							\
	src/data/StringList.cpp							\
	src/data/StringList.h							\
	src/data/StringListOperations.cpp				\
	src/data/StringListOperations.h					\
	src/data/StringPart.h							\
	src/data/Target.cpp								\
	src/data/Target.h								\
	src/data/TargetBinder.cpp						\
	src/data/TargetBinder.h							\
	src/data/TargetContainers.h						\
	src/data/TargetPool.cpp							\
	src/data/TargetPool.h							\
	src/data/Time.cpp								\
	src/data/Time.h									\
	src/data/VariableDomain.h						\
	src/data/VariableScope.cpp						\
	src/data/VariableScope.h						\
	src/make/Command.cpp							\
	src/make/Command.h								\
	src/make/MakeException.h						\
	src/make/MakeTarget.cpp							\
	src/make/MakeTarget.h							\
	src/make/Options.cpp							\
	src/make/Options.h								\
	src/make/Processor.cpp							\
	src/make/Processor.h							\
	src/make/TargetBuildInfo.cpp					\
	src/make/TargetBuildInfo.h						\
	src/make/TargetBuilder.cpp						\
	src/make/TargetBuilder.h						\
	src/parser/LexException.h						\
	src/parser/Lexer.h								\
	src/parser/ParseException.h						\
	src/parser/ParsePosition.h						\
	src/parser/Parser.cpp							\
	src/parser/Parser.h								\
	src/parser/Token.h								\
	src/platform/PlatformProcessDelegate.h			\
	src/platform/unix/PlatformProcessDelegate.cpp	\
	src/platform/unix/PlatformProcessDelegate.h		\
	src/process/ChildInfo.h							\
	src/process/Process.cpp							\
	src/process/Process.h							\
	src/util/Constants.cpp							\
	src/util/Constants.h							\
	src/util/Exception.h							\
	src/util/OptionIterator.cpp						\
	src/util/OptionIterator.h						\
	src/util/Referenceable.cpp						\
	src/util/Referenceable.h						\
	src/util/SequentialSet.h						\
	src/util/TextFileException.h					\
	src/util/TextFilePosition.h

bin_PROGRAMS = ham
ham_SOURCES = src/ham.cpp
ham_LDADD = libham.la
dist_doc_DATA = README.md
