lib_LTLIBRARIES = libham.la
libham_la_SOURCES =								\
	behavior/Behavior.cpp						\
	code/ActionsDefinition.cpp					\
	code/Assignment.cpp							\
	code/BinaryExpression.cpp					\
	code/Block.cpp								\
	code/BuiltInRules.cpp						\
	code/Case.cpp								\
	code/Constant.cpp							\
	code/DumpContext.cpp						\
	code/EvaluationContext.cpp					\
	code/For.cpp								\
	code/FunctionCall.cpp						\
	code/If.cpp									\
	code/InListExpression.cpp					\
	code/Include.cpp							\
	code/Jambase.cpp							\
	code/Jump.cpp								\
	code/Leaf.cpp								\
	code/List.cpp								\
	code/LocalVariableDeclaration.cpp			\
	code/Node.cpp								\
	code/NotExpression.cpp						\
	code/OnExpression.cpp						\
	code/RuleDefinition.cpp						\
	code/RuleInstructions.cpp					\
	code/Switch.cpp								\
	code/UserRuleInstructions.cpp				\
	code/While.cpp								\
	data/FileStatus.cpp							\
	data/Path.cpp								\
	data/RegExp.cpp								\
	data/RuleActions.cpp						\
	data/String.cpp								\
	data/StringList.cpp							\
	data/StringListOperations.cpp				\
	data/Target.cpp								\
	data/TargetBinder.cpp						\
	data/TargetPool.cpp							\
	data/Time.cpp								\
	data/VariableScope.cpp						\
	make/Command.cpp							\
	make/MakeTarget.cpp							\
	make/Options.cpp							\
	make/Processor.cpp							\
	make/TargetBuildInfo.cpp					\
	make/TargetBuilder.cpp						\
	parser/Parser.cpp							\
	platform/unix/PlatformProcessDelegate.cpp	\
	process/Process.cpp							\
	util/Constants.cpp							\
	util/OptionIterator.cpp						\
	util/Referenceable.cpp

# TODO: define private/public headers
nobase_dist_include_HEADERS =				\
	behavior/Behavior.h						\
	behavior/Compatibility.h				\
	code/ActionsDefinition.h				\
	code/Assignment.h						\
	code/BinaryExpression.h					\
	code/Block.h							\
	code/BuiltInRules.h						\
	code/Case.h								\
	code/Constant.h							\
	code/Defs.h								\
	code/DumpContext.h						\
	code/EvaluationContext.h				\
	code/EvaluationException.h				\
	code/For.h								\
	code/FunctionCall.h						\
	code/If.h								\
	code/InListExpression.h					\
	code/Include.h							\
	code/Jambase.h							\
	code/Jump.h								\
	code/Leaf.h								\
	code/List.h								\
	code/LocalVariableDeclaration.h			\
	code/Node.h								\
	code/NotExpression.h					\
	code/OnExpression.h						\
	code/Rule.h								\
	code/RuleDefinition.h					\
	code/RuleInstructions.h					\
	code/RulePool.h							\
	code/Switch.h							\
	code/UserRuleInstructions.h				\
	code/While.h							\
	data/FileStatus.h						\
	data/Path.h								\
	data/RegExp.h							\
	data/RuleActions.h						\
	data/String.h							\
	data/StringBuffer.h						\
	data/StringList.h						\
	data/StringListOperations.h				\
	data/StringPart.h						\
	data/Target.h							\
	data/TargetBinder.h						\
	data/TargetContainers.h					\
	data/TargetPool.h						\
	data/Time.h								\
	data/VariableDomain.h					\
	data/VariableScope.h					\
	make/Command.h							\
	make/MakeException.h					\
	make/MakeTarget.h						\
	make/Options.h							\
	make/Processor.h						\
	make/TargetBuildInfo.h					\
	make/TargetBuilder.h					\
	parser/LexException.h					\
	parser/Lexer.h							\
	parser/ParseException.h					\
	parser/ParsePosition.h					\
	parser/Parser.h							\
	parser/Token.h							\
	platform/PlatformProcessDelegate.h		\
	platform/unix/PlatformProcessDelegate.h	\
	process/ChildInfo.h						\
	process/Process.h						\
	util/Constants.h						\
	util/Exception.h						\
	util/OptionIterator.h					\
	util/Referenceable.h					\
	util/SequentialSet.h					\
	util/TextFileException.h				\
	util/TextFilePosition.h
